# rag-search-engine-faq-dataset

./: .gitignore  LICENSE  README.md  main.py  notebook.ipynb  onnx_runtime_file_embedding.py  pyproject.toml
homework/: agentic_rag.ipynb  vector_search.ipynb
notebooks/: agents.ipynb  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  rag.ipynb  rag_ingest.ipynb  vector_search.ipynb  vector_search_persistant.ipynb  vector_search_pgvector.ipynb
notes/: data_ingestion.md  minsearch.md  sqlitesearch.md
src/: rag_helper.py
